--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  width: 60%;
+  height: 60%;
+  margin: auto;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: smaller;
+  background: lightgrey;
 }
